# TH-Rosenheim-Backup

./: .gitignore  B4 - Verknüpfung.lnk  B5 - Verknüpfung.lnk  README.md  Zeitplan.xlsx
INF/: BVWL - Verknüpfung.lnk  (+6 more)
INF/PrgT/Cpp/00-toolchain-setup/: 00_cpp_toolchain_setup.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
INF/PrgT/Cpp/00-toolchain-setup/googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
INF/PrgT/Cpp/00-toolchain-setup/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  lib_multiply.vcxproj  lib_multiply.vcxproj.filters  main.cpp  multiply.cpp  multiply.h  multiply.sln  multiply.vcxproj  multiply.vcxproj.filters
INF/PrgT/Cpp/00-toolchain-setup/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MultiplyTests.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  multiply_tests.sln  multiply_tests.vcxproj  multiply_tests.vcxproj.filters  multiply_tests[1]_include.cmake
INF/PrgT/Cpp/01-cpp-introduction/: 01_cpp_introduction.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/polynomial/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  libpolynomial.vcxproj  libpolynomial.vcxproj.filters  main.cpp  polynomial.cpp  polynomial.h  polynomial.sln  polynomial.vcxproj  polynomial.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/rotate/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  librotate.vcxproj  librotate.vcxproj.filters  main.cpp  rotate.cpp  rotate.h  rotate.sln  rotate.vcxproj  rotate.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/square/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  main.cpp  square.sln  square.vcxproj  square.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/square_dynamic_allocation/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  main.cpp  square_dynamic_allocation.sln  square_dynamic_allocation.vcxproj  square_dynamic_allocation.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/tests/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
INF/PrgT/Cpp/01-cpp-introduction/tests/polynomial_tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  polynomial_tests.cpp  polynomial_tests.sln  polynomial_tests.vcxproj  polynomial_tests.vcxproj.filters  polynomial_tests[1]_include.cmake
INF/PrgT/Cpp/01-cpp-introduction/tests/rotate_tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  rotate_tests.cpp  rotate_tests.sln  rotate_tests.vcxproj  rotate_tests.vcxproj.filters  rotate_tests[1]_include.cmake
INF/PrgT/Cpp/02-classes/: CMakeLists.txt  README.md
INF/PrgT/Cpp/02-classes/car_exchange/: CMakeLists.txt  Car.cpp  Car.h  CarExchange.cpp  CarExchange.h  classic_threads.cpp  main.cpp
INF/PrgT/Cpp/02-classes/dice_game/: CMakeLists.txt  Dice.cpp  Dice.h  Future.h  Player.cpp  Player.h  Promise.h  SharedState.h  main.cpp
INF/PrgT/Cpp/02-classes/structures/: CMakeLists.txt  main.cpp
INF/PrgT/Cpp/02-classes/tests/: CMakeLists.txt
INF/PrgT/Cpp/02-classes/tests/car_exchange_tests/: CMakeLists.txt  car_tests.cpp  exchange_car_tests.cpp
INF/PrgT/Cpp/02-classes/unions/: CMakeLists.txt  main.cpp
INF/PrgT/Cpp/03-inheritance-and-polymorphism/: CMakeLists.txt  README.md
INF/PrgT/Cpp/03-inheritance-and-polymorphism/diamond_problem/: AmphibiousCar.cpp  AmphibiousCar.h  Boat.cpp  Boat.h  CMakeLists.txt  Car.cpp  Car.h  Vehicle.cpp  Vehicle.h  main.cpp
INF/PrgT/Cpp/03-inheritance-and-polymorphism/inheritance/: CMakeLists.txt  Circle.cpp  Circle.h  Position.h  Shape.cpp  Shape.h  main.cpp
INF/PrgT/Cpp/03-inheritance-and-polymorphism/tests/: CMakeLists.txt
INF/PrgT/Cpp/03-inheritance-and-polymorphism/tests/inheritance_tests/: CMakeLists.txt  circle_tests.cpp  shape_tests.cpp
INF/PrgT/Cpp/03-inheritance-and-polymorphism/tests/virtual_methods_and_polymorphism_tests/: CMakeLists.txt  vehicle_tests.cpp
INF/PrgT/Cpp/03-inheritance-and-polymorphism/virtual_methods_and_polymorphism/: Bicycle.cpp  Bicycle.h  CMakeLists.txt  Car.cpp  Car.h  Motorcycle.cpp  Motorcycle.h  Tricycle.cpp  Tricycle.h  Vehicle.h  main.cpp
INF/PrgT/Cpp/07-unit-testing/: CMakeLists.txt  README.md
INF/PrgT/Cpp/07-unit-testing/multiply/: CMakeLists.txt  multiply.h
INF/PrgT/Cpp/07-unit-testing/student/: CMakeLists.txt  Student.cpp  Student.h
INF/PrgT/Cpp/07-unit-testing/test/: CMakeLists.txt
INF/PrgT/Cpp/07-unit-testing/test/multiply/: CMakeLists.txt
INF/PrgT/Cpp/07-unit-testing/test/multiply/boost_test/: CMakeLists.txt  multiply_tests.cpp
INF/PrgT/Cpp/07-unit-testing/test/student/: CMakeLists.txt
(+1236 files in other folders)
